aws-terraform-eks/4-subnets.tf
resource "aws_subnet" "private_zone1" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.0.0/19"
  availability_zone = local.zone1

  tags = {
    "Name"                            = "${local.env}-private-${local.zone1}"
    "kubernetes.io/role/internal-elb" = "1"
    # this tag format suggest from the eks, so that the kubernets and AWS Load balancer controller know that subnet can be used for internal load balancer also.
    "kubernetes.io/cluster/${local.env}-${local.eks_name}" = "owned" # This tage is optional but suggest if there are multiple cluster in the aws account.
  }
}


resource "aws_subnet" "private_zone2" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.32.0/19"
  availability_zone = local.zone2

  tags = {
    "Name"                            = "${local.env}-private-${local.zone2}"
    "kubernetes.io/role/internal-elb" = "1"
    # this tag format suggest from the eks, so that the kubernets and AWS Load balancer controller know that subnet can be used for internal load balancer also.
    "kubernetes.io/cluster/${local.env}-${local.eks_name}" = "owned" # This tage is optional but suggest if there are multiple cluster in the aws account.
  }
}

resource "aws_subnet" "public_zone1" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.64.0/19"
  availability_zone       = local.zone1
  map_public_ip_on_launch = true # Some services and vm's required public ip address to reach to internet. 

  tags = {
    "Name"                                                 = "${local.env}-public-${local.zone1}"
    "kubernetes.io/role/elb"                               = "1"
    "kubernetes.io/cluster/${local.env}-${local.eks_name}" = "owned"
  }
}

resource "aws_subnet" "public_zone2" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.96.0/19"
  availability_zone       = local.zone2
  map_public_ip_on_launch = true # Some services and vm's required public ip address to reach to internet. 

  tags = {
    "Name"                                                 = "${local.env}-public-${local.zone2}"
    "kubernetes.io/role/elb"                               = "1" # because when we use the Load balancer type so we need to work the load balance as internet-facing sometimes. 
    "kubernetes.io/cluster/${local.env}-${local.eks_name}" = "owned"
  }
}
